--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
 		"retry": "^0.12.0"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"delay": "^2.0.0",
-		"xo": "*"
+		"ava": "^0.25.0",
+		"delay": "^4.1.0",
+		"xo": "^0.23.0"
 	}
 }
