--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
 		"node": ">=6"
 	},
 	"scripts": {
-		"test": "xo && ava"
+		"test": "xo && ava && tsd-check"
 	},
 	"files": [
-		"index.js"
+		"index.js",
+		"index.d.ts"
 	],
 	"keywords": [
 		"promise",
@@ -38,11 +39,13 @@
 		"bluebird"
 	],
 	"dependencies": {
+		"@types/retry": "^0.12.0",
 		"retry": "^0.12.0"
 	},
 	"devDependencies": {
-		"ava": "^1.1.0",
+		"ava": "^1.3.1",
 		"delay": "^4.1.0",
+		"tsd-check": "^0.3.0",
 		"xo": "^0.24.0"
 	}
 }
