--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
 	"description": "Retry a promise-returning or async function",
 	"license": "MIT",
 	"repository": "sindresorhus/p-retry",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
-		"url": "sindresorhus.com"
+		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=8"
+		"node": "^12.20.0 || ^14.13.1 || >=16.0.0"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -39,13 +42,13 @@
 		"bluebird"
 	],
 	"dependencies": {
-		"@types/retry": "^0.12.0",
+		"@types/retry": "^0.12.1",
 		"retry": "^0.13.1"
 	},
 	"devDependencies": {
-		"ava": "^2.4.0",
-		"delay": "^4.1.0",
-		"tsd": "^0.10.0",
-		"xo": "^0.25.3"
+		"ava": "^3.15.0",
+		"delay": "^5.0.0",
+		"tsd": "^0.18.0",
+		"xo": "^0.46.4"
 	}
 }
