Lock the `@types/retry` dependency
Fixes #64

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 		"bluebird"
 	],
 	"dependencies": {
-		"@types/retry": "^0.12.1",
+		"@types/retry": "0.12.1",
 		"retry": "^0.13.1"
 	},
 	"devDependencies": {
