Move network error detection into a separate package
Fixes #74

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	],
 	"dependencies": {
 		"@types/retry": "0.12.2",
+		"is-network-error": "^1.0.0",
 		"retry": "^0.13.1"
 	},
 	"devDependencies": {
