--- a/package.json
+++ b/package.json
@@ -44,14 +44,17 @@
 		"bluebird"
 	],
 	"dependencies": {
-		"@types/retry": "0.12.2",
-		"is-network-error": "^1.0.0",
-		"retry": "^0.13.1"
+		"is-network-error": "^1.0.0"
 	},
 	"devDependencies": {
 		"ava": "^5.3.1",
 		"delay": "^6.0.0",
 		"tsd": "^0.28.1",
 		"xo": "^0.56.0"
+	},
+	"xo": {
+		"rules": {
+			"no-await-in-loop": "off"
+		}
 	}
 }
