--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 		"url": "https://sindresorhus.com"
 	},
 	"type": "module",
-	"exports": "./index.js",
-	"types": "./index.d.ts",
+	"exports": {
+		"types": "./index.d.ts",
+		"default": "./index.js"
+	},
 	"sideEffects": false,
 	"engines": {
-		"node": ">=16.17"
+		"node": ">=20"
 	},
 	"scripts": {
 		"test": "xo && ava && tsd"
@@ -44,13 +46,13 @@
 		"bluebird"
 	],
 	"dependencies": {
-		"is-network-error": "^1.0.0"
+		"is-network-error": "^1.1.0"
 	},
 	"devDependencies": {
-		"ava": "^5.3.1",
+		"ava": "^6.3.0",
 		"delay": "^6.0.0",
-		"tsd": "^0.28.1",
-		"xo": "^0.56.0"
+		"tsd": "^0.32.0",
+		"xo": "^0.60.0"
 	},
 	"xo": {
 		"rules": {
