--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "p-retry",
-	"version": "6.2.1",
+	"version": "7.0.0-0",
 	"description": "Retry a promise-returning or async function",
 	"license": "MIT",
 	"repository": "sindresorhus/p-retry",
